Ajustando margens do login

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                             <label for="senha" class="label-senha">Senha</label>
                             <input name="senha" id="senha" class="input-senha" type="password" placeholder="•••••••••••••" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[ !@#$%&^_=+-]).{6,12}$" data-tipo="senha" autocomplete="off">
                             <span class="input-mensagem-erro">Senha incorreta.</span>
+                            <button type="button" class="mostra-senha">
                         </div>
 
                         <div class="toggle">
