Implementando Responsividade Mobile na tela de Login

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                 </div>
 
                 <div class="redes-sociais">
-                    <div>
+                    <div class="container__redes-sociais">
                         <h3 class="titulo__redes-sociais">Minhas redes socias</h3>
-                    </div>
-                    <div class="links__redes-socias">
-                        <a href="#"><img src="./Assets/VectorYoutube.svg" alt="Link para youtube da Anbetec"></a>
-                        <a href="#"><img src="./Assets/VectorInstagram.svg" alt="Link para instagram da Anbetec"></a>
-                        <a href="#"><img src="./Assets/VectorFacebook.svg" alt="Link para facebook da Anbetec"></a>
-                        <a href="#"><img src="./Assets/VectorTwitter.svg" alt="Link para twitter da Anbetec"></a>
+                        <div class="links__redes-sociais">
+                            <a href="#"><img src="./Assets/VectorYoutube.svg" alt="Link para youtube da Anbetec"></a>
+                            <a href="#"><img src="./Assets/VectorInstagram.svg" alt="Link para instagram da Anbetec"></a>
+                            <a href="#"><img src="./Assets/VectorFacebook.svg" alt="Link para facebook da Anbetec"></a>
+                            <a href="#"><img src="./Assets/VectorTwitter.svg" alt="Link para twitter da Anbetec"></a>
+                        </div>
                     </div>
                     <a href="#" class="whatsapp"><img src="./Assets/icone-whatsapp.png" alt="Mandar Mensagem para Whatsapp da Anbetec"></a>
                 </div>
