Adicionando assets da home e começando a codar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="./CSS/base.css" rel="stylesheet">
         <link href="./CSS/reset.css" rel="stylesheet">
         <link href="./CSS/normalize.css" rel="stylesheet">
+        <link rel="shortcut icon" href="./Assets/Logo-favicon.png" type="image/x-icon" />
         <title>Login | Anbetec</title>
     </head>
 
@@ -94,7 +95,7 @@
                             <span>Manter-me logado</span>
                         </div>
 
-                        <a href="./home.html"><button type="submit" class="input-botao">Entrar</button></a>
+                        <a href="./home.html"><button type="button" class="input-botao">Entrar</button></a>
                         <a href="#" class="esqueceu-senha">Esqueceu Sua Senha ?</a>
                     </form>
                 </div>
