Ajustando espaçamentos do cabecalho da home

--- a/home.html
+++ b/home.html
@@ -21,15 +21,18 @@
         <div class="container-pesquisa">
             <input type="text" class="barra-pesquisa" placeholder="Procure pelo portal">
         </div>
-        <div class="container__notificacao">
-            <img src="./Assets/notificação.png" alt="Notificação" class="notificacao">
-            <img src="./Assets/notificação-ativa.png" alt="Você possui notificação" class="notificacao-ativa">
-        </div>
-        <div class="perfil-area">
-            <img src="./Assets/icone2.png" alt="Sua Foto de Perfil" class="icone__perfil">
-            <div class="informacoes__perfil">
-                <h1 class="nome__perfil">Davi Neris</h1>
-                <span class="banco__perfil">Banco Anbetec</span>
+        
+        <div class="container__info">
+            <div class="container__notificacao">
+                <img src="./Assets/notificação.png" alt="Notificação" class="notificacao">
+                <img src="./Assets/notificação-ativa.png" alt="Você possui notificação" class="notificacao-ativa">
+            </div>
+            <div class="perfil-area">
+                <img src="./Assets/icone2.png" alt="Sua Foto de Perfil" class="icone__perfil">
+                <div class="informacoes__perfil">
+                    <h1 class="nome__perfil">Davi Neris</h1>
+                    <span class="banco__perfil">Banco Anbetec</span>
+                </div>
             </div>
         </div>
     </header>
