--- a/home.html
+++ b/home.html
@@ -171,8 +171,8 @@
             </div>
         </section>
     </main>
-<script src="./Componentes/index.js" type="module"></script>
-<script src="./Componentes/tab.js" type="text/javascript"></script>
+<script src="Componentes/index.js" type="module"></script>
+<script src="Componentes/tab.js" type="text/javascript"></script>
 </body>
 
 </html>
