Alterando path de EDI Financeiro

--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
                     </p>
                 </a>
                 
-                <a href="/edi-financeiro.html" class="card__aplicacao">
+                <a href="./edi-financeiro.html" class="card__aplicacao">
                     <p class="edi-financeiro">
                         EDI Financeiro
                         <span class="tempo-visto">Último acesso: há 4 minutos</span>
