--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./CSS/Home/home.css">
+    <link rel="stylesheet" href="./CSS/Home/homeResponsivo.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="./CSS/base.css" rel="stylesheet">
     <link href="./CSS/reset.css" rel="stylesheet">
@@ -19,6 +20,7 @@
     <header class="cabecalho">
         <img src="./Assets/LogoAnbetec.png" alt="Logo Anbetec" class="logo-anbetec">
         <div class="container-pesquisa">
+            <button class="pesquisa-mobile"><img class="ico-pesquisa-mobile" src="./Assets/ico-pesquisa-mobile.png" alt="Abrir Barra Pesquisa"></button>
             <input type="text" class="barra-pesquisa" placeholder="Procure pelo portal">
         </div>
         
