Alterando paths de EDI

--- a/edi-financeiro.html
+++ b/edi-financeiro.html
@@ -43,7 +43,7 @@
             <section class="movimentacao">
                 <div class="intro__edi-financeiro">
                     <p class="paginacao__edi-financeiro">
-                        <a href="/home.html" class="link-paginacao">Produtos</a><a href="/edi-financeiro.html" class="destaque__paginacao">EDI-Financeiro</a>
+                        <a href="./home.html" class="link-paginacao">Produtos</a><a href="./edi-financeiro.html" class="destaque__paginacao">EDI-Financeiro</a>
                     </p>
                     <h2 class="titulo__edi-financeiro">
                         Movimentação
