Finalizando metade do código de Processamento de Serviço

--- a/edi-financeiro.html
+++ b/edi-financeiro.html
@@ -52,7 +52,7 @@
 
                 <div class="secao__movimentacao">
                 
-                    <a class="card__movimentacao">
+                    <a href="./processamento-servico.html" class="card__movimentacao">
                         <p class="processamento-servico">
                             Processamento de serviço
                             <span class="tempo-visto">Último acesso: há 3 horas</span>
