Implementando limpar filtros

--- a/processamento-servico.html
+++ b/processamento-servico.html
@@ -148,7 +148,7 @@
                                     </div>
                                     
                                     <div class="botoes__form">
-                                        <button type="reset" class="botao-limpar">Limpar</button>
+                                        <button type="reset" class="botao-limpar" id="limpa__filtro___cobranca">Limpar</button>
                                         <button type="button" class="botao-pesquisa" id="pesquisa__filtro">Pesquisar</button>
                                     </div>
                                 </section>
@@ -298,7 +298,7 @@
                                     </div>
                                     
                                     <div class="botoes__form">
-                                        <button type="reset" class="botao-limpar">Limpar</button>
+                                        <button type="reset" class="botao-limpar" id="limpa__filtro___pagamento">Limpar</button>
                                         <button type="button" class="botao-pesquisa" id="pesquisa__filtro___pagamento">Pesquisar</button>
                                     </div>
                                 </section>
