--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
 <body class="body">
     <header class="cabecalho">
-        <img src="./Assets/LogoAnbetec.png" alt="Logo Anbetec" class="logo-anbetec">
+        <a href="./home.html"><img src="./Assets/LogoAnbetec.png" alt="Logo Anbetec" class="logo-anbetec"></a>
         <div class="container-pesquisa">
             <button class="pesquisa-mobile"><img class="ico-pesquisa-mobile" src="./Assets/ico-pesquisa-mobile.png" alt="Abrir Barra Pesquisa"></button>
             <input type="text" class="barra-pesquisa" placeholder="Procure pelo portal">
