Ajustando tela de login

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Login | Anbetec</title>
     </head>
 
-    <body>
+    <body id="body">
         <main class="conteudo">
             <section class="intro">
                 <img src="./Assets/VectorPreenchidoVerde.svg" class="vector-preenchido">
