--- a/edi-financeiro.html
+++ b/edi-financeiro.html
@@ -106,7 +106,7 @@
 
                 <div class="secao__configuracao">
                 
-                    <a class="card__movimentacao">
+                    <a href="./configuracaoDeServico.html" class="card__movimentacao">
                         <p class="configuracao-servicos">
                             Configuração de serviços
                             <span class="tempo-visto">Último acesso: há 3 horas</span>
