Iniciando criação da tela de gerenciamento de layouts

--- a/edi-financeiro.html
+++ b/edi-financeiro.html
@@ -113,7 +113,7 @@
                         </p>
                     </a>
                     
-                    <a class="card__movimentacao">
+                    <a href="./gerenciamentoLayouts.html" class="card__movimentacao">
                         <p class="gerenciamento-layouts">
                            Gerenciamento de Layouts
                             <span class="tempo-visto">Último acesso: há 3 horas</span>
