Ajustando titulo de gerenciamento

--- a/gerenciamentoLayouts.html
+++ b/gerenciamentoLayouts.html
@@ -164,7 +164,7 @@
                 <section class="cadastra-layout">
                     
                     <div class="cabecalho__cadastra-layout">
-                        <h1 class="titulo__cabecalho__cadastra-layout">Incluir Configuração de DDA</h1>
+                        <h1 class="titulo__cabecalho__cadastra-layout">Cadastro de Layout</h1>
                         <button class="fecha__cadastra-layout" id="botao__fecha___cadastra-layout"></button>
                     </div>
 
