Finalizando tela de Limite Automático

--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                     </p>
                 </a>
                 
-                <a class="card__aplicacao">
+                <a href="./limiteAutomatico.html" class="card__aplicacao">
                     <p class="limite-automatico">
                         Limite Automático
                         <span class="tempo-visto">Último acesso: há 2 dias</span>
