Alterando title de limite automático

--- a/limiteAutomatico.html
+++ b/limiteAutomatico.html
@@ -12,7 +12,7 @@
         <link href="./CSS/reset.css" rel="stylesheet">
         <link href="./CSS/normalize.css" rel="stylesheet">
         <link rel="shortcut icon" href="./Assets/Logo-favicon.png" type="image/x-icon">
-        <title>Gerenciamento de Layouts | Anbetec</title>
+        <title>Limite Automático | Anbetec</title>
     </head>
 
     <body id="body">
