Finalizando tela de Extrato de Cobranca

--- a/edi-financeiro.html
+++ b/edi-financeiro.html
@@ -87,7 +87,7 @@
                         </p>
                     </a>
                     
-                    <a class="card__movimentacao">
+                    <a href="./EDI-FINANCEIRO/extrato-cobranca.html" class="card__movimentacao">
                         <p class="extrato-cobranca">
                             Extrato de cobranças
                             <span class="tempo-visto">Último acesso: há 3 horas</span>
