--- a/processamento-dda.html
+++ b/processamento-dda.html
@@ -96,6 +96,7 @@
                     </form>
                 </section>
                 
+            </section>  
                 
                 <section class="resultado__pesquisa__dda" id="resultado__dda">
                     <section class="info__resultado">
