--- a/processamento-servico.html
+++ b/processamento-servico.html
@@ -171,6 +171,8 @@
                             </section>
 
                             <section class="clientes">
+                                <ul>
+                                    <li class="item__clientes">
                                         <form class="lista__clientes">
                                             
                                             <li class="cliente__pesquisa">
