--- a/edi-financeiro.html
+++ b/edi-financeiro.html
@@ -59,7 +59,7 @@
                         </p>
                     </a>
                     
-                    <a class="card__movimentacao">
+                    <a href="./EDI-FINANCEIRO/processamento-retorno.html" class="card__movimentacao">
                         <p class="processamento-retorno">
                             Processamento de retorno
                             <span class="tempo-visto">Último acesso: há 3 horas</span>
