--- a/EDI-FINANCEIRO/processamento-retorno.html
+++ b/EDI-FINANCEIRO/processamento-retorno.html
@@ -114,7 +114,7 @@
                         </section>
                         <div class="botoes__form">
                             <button type="reset" class="botao-limpar">Limpar</button>
-                            <button type="button" class="botao-pesquisa" id="pesquisa__retorno" onclick="abrirResultadoDDA()">Pesquisar</button>
+                            <button type="button" class="botao-pesquisa" id="pesquisa__retorno" onclick="abrirResultadoretornoFiltro()">Pesquisar</button>
                         </div>
                     </form>
 
@@ -165,6 +165,24 @@
                                 <p class="retorno-lista__valor-total">XXXXXXX</p>
 
                             </li>
+
+                            <li class="item__lista___retorno-lista">
+
+                                <input type="checkbox" class="input__check___lista-retorno">
+
+                                <p class="retorno-lista__banco">XXXXXXXXX-XXXXX</p>
+
+                                <p class="retorno-lista__arquivo">XXXXXXXXXX</p>
+
+                                <p class="retorno-lista__data-processamento">XX/XX/XXXX</p>
+
+                                <p class="retorno-lista__status">XXXXXXX</p>
+
+                                <p class="retorno-lista__codigo-barras">XXXX-XXXXXXXXX-XX</p>
+
+                                <p class="retorno-lista__valor-total">XXXXXXX</p>
+
+                            </li>
                             
                         </ul>
 
@@ -190,7 +208,8 @@
             </section>
 
         </main>
-
+    
+    <script src="../Componentes/ProcessamentoRetorno/processamentoRetorno.js" type="text/javascript"></script>
     </body>
 
 </html>
