Finalizando tela de gerenciamento de arquivos

--- a/edi-financeiro.html
+++ b/edi-financeiro.html
@@ -80,7 +80,7 @@
                         </p>
                     </a>
                     
-                    <a class="card__movimentacao">
+                    <a href="./EDI-FINANCEIRO/gerenciamento-arquivos.html" class="card__movimentacao">
                         <p class="gerenciamento-arquivos">
                             Gerenciamento de arquivos
                             <span class="tempo-visto">Último acesso: há 3 horas</span>
