Realizando ajustes de Q.A em Conferencia e Conciliação

--- a/EDI-FINANCEIRO/processamento-retorno.html
+++ b/EDI-FINANCEIRO/processamento-retorno.html
@@ -128,17 +128,17 @@
 
                         <p class="info__retorno-lista___selecionar">Selecionar</p>
                         
+                        <p class="info__retorno-lista___evento">Evento</p>
+
                         <p class="info__retorno-lista___banco">Banco</p>
+
+                        <p class="info__retorno-lista___conta">Conta</p>
 
                         <p class="info__retorno-lista___arquivo">Arquivo</p>
 
-                        <p class="info__retorno-lista___data-processamento">Data Processamento</p>
+                        <p class="info__retorno-lista___data">Data</p>
 
                         <p class="info__retorno-lista___status">Status</p>
-
-                        <p class="info__retorno-lista___codigo-barras">Qdt. Código de Barras</p>
-
-                        <p class="info__retorno-lista___valor-total">Valor Total</p>
 
                 </section>
 
@@ -152,17 +152,17 @@
 
                                 <input type="checkbox" class="input__check___lista-retorno">
 
-                                <p class="retorno-lista__banco">XXXXXXXXX-XXXXX</p>
+                                <p class="retorno-lista__evento">XXXXXXXXX-XXXXX</p>
 
-                                <p class="retorno-lista__arquivo">XXXXXXXXXX</p>
+                                <p class="retorno-lista__banco">XXXXXXXXXX</p>
 
-                                <p class="retorno-lista__data-processamento">XX/XX/XXXX</p>
+                                <p class="retorno-lista__conta">XXXXXXXXX-XXXXX</p>
+
+                                <p class="retorno-lista__arquivo">XXXXXXX</p>
+
+                                <p class="retorno-lista__data">XX/XX/XXXX</p>
 
                                 <p class="retorno-lista__status">XXXXXXX</p>
-
-                                <p class="retorno-lista__codigo-barras">XXXX-XXXXXXXXX-XX</p>
-
-                                <p class="retorno-lista__valor-total">XXXXXXX</p>
 
                             </li>
 
@@ -170,17 +170,17 @@
 
                                 <input type="checkbox" class="input__check___lista-retorno">
 
-                                <p class="retorno-lista__banco">XXXXXXXXX-XXXXX</p>
+                                <p class="retorno-lista__evento">XXXXXXXXX-XXXXX</p>
 
-                                <p class="retorno-lista__arquivo">XXXXXXXXXX</p>
+                                <p class="retorno-lista__banco">XXXXXXXXXX</p>
 
-                                <p class="retorno-lista__data-processamento">XX/XX/XXXX</p>
+                                <p class="retorno-lista__conta">XXXXXXXXX-XXXXX</p>
+
+                                <p class="retorno-lista__arquivo">XXXXXXX</p>
+
+                                <p class="retorno-lista__data">XX/XX/XXXX</p>
 
                                 <p class="retorno-lista__status">XXXXXXX</p>
-
-                                <p class="retorno-lista__codigo-barras">XXXX-XXXXXXXXX-XX</p>
-
-                                <p class="retorno-lista__valor-total">XXXXXXX</p>
 
                             </li>
                             
