Finalizando tela de Cobrança

--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
                     </p>
                 </a>
                 
-                <a class="card__aplicacao">
+                <a href="./cobranca.html" class="card__aplicacao">
                     <p class="cobranca">
                         Cobrança
                         <span class="tempo-visto">Último acesso: há 3 horas</span>
