Finalizando tela de Cobre Mais

--- a/cobranca.html
+++ b/cobranca.html
@@ -1106,6 +1106,7 @@
                         <button class="carrousel__button__conteudo carrousel__button--anterior__conteudo" aria-label="Botão de Voltar">Anterior</button>
                         <button class="carrousel__button__conteudo carrousel__button--proximo__conteudo" aria-label="Botão de Avançar">Próximo</button>
                     </div>
+                </section>
             </section>
 
             </section>
