--- a/cobre-mais.html
+++ b/cobre-mais.html
@@ -244,7 +244,7 @@
 
                             <p class="info__log___conteudo">Conteúdo</p>
 
-                            <p class="info__log___id-notificacao">Estimativa</p>
+                            <p class="info__log___id-notificacao">ID Notificação</p>
 
                             <p class="info__log___data-envio">Data Envio</p>
                           
