--- a/EDI-FINANCEIRO/processamento-servico.html
+++ b/EDI-FINANCEIRO/processamento-servico.html
@@ -7,31 +7,31 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./CSS/Processamento-Servico/processamentoServicoCobranca.css">
-        <link rel="stylesheet" href="./CSS/Processamento-Servico/processamentoServicoPagamento.css">
-        <link rel="stylesheet" href="./CSS/Processamento-Servico/processamentoServicoResponsivo.css">
-        <link href="./CSS/base.css" rel="stylesheet">
-        <link href="./CSS/reset.css" rel="stylesheet">
-        <link href="./CSS/normalize.css" rel="stylesheet">
-        <link rel="shortcut icon" href="./Assets/Logo-favicon.png" type="image/x-icon" />
+        <link rel="stylesheet" href="../CSS/Processamento-Servico/processamentoServicoCobranca.css">
+        <link rel="stylesheet" href="../CSS/Processamento-Servico/processamentoServicoPagamento.css">
+        <link rel="stylesheet" href="../CSS/Processamento-Servico/processamentoServicoResponsivo.css">
+        <link href="../CSS/base.css" rel="stylesheet">
+        <link href="../CSS/reset.css" rel="stylesheet">
+        <link href="../CSS/normalize.css" rel="stylesheet">
+        <link rel="shortcut icon" href="../Assets/Logo-favicon.png" type="image/x-icon" />
         <title>Processamento de Serviço | Anbetec</title>
     </head>
 
     <body id="body">
         <header class="cabecalho">
-            <a href="./home.html"><img src="./Assets/LogoAnbetec.png" alt="Logo Anbetec" class="logo-anbetec"></a>
+            <a href="../home.html"><img src="../Assets/LogoAnbetec.png" alt="Logo Anbetec" class="logo-anbetec"></a>
             <div class="container-pesquisa">
-                <button class="pesquisa-mobile"><img class="ico-pesquisa-mobile" src="./Assets/ico-pesquisa-mobile.png" alt="Abrir Barra Pesquisa"></button>
+                <button class="pesquisa-mobile"><img class="ico-pesquisa-mobile" src="../Assets/ico-pesquisa-mobile.png" alt="Abrir Barra Pesquisa"></button>
                 <input type="text" class="barra-pesquisa" placeholder="Procure pelo portal">
             </div>
             
             <div class="container__info">
                 <button type="button" class="container__notificacao">
-                    <img src="./Assets/notificação.png" alt="Notificação" class="notificacao">
-                    <img src="./Assets/notificação-ativa.png" alt="Você possui notificação" class="notificacao-ativa">
+                    <img src="../Assets/notificação.png" alt="Notificação" class="notificacao">
+                    <img src="../Assets/notificação-ativa.png" alt="Você possui notificação" class="notificacao-ativa">
                 </button>
                 <div class="perfil-area">
-                    <img src="./Assets/icone2.png" alt="Sua Foto de Perfil" class="icone__perfil">
+                    <img src="../Assets/icone2.png" alt="Sua Foto de Perfil" class="icone__perfil">
                     <div class="informacoes__perfil">
                         <h1 class="nome__perfil">Davi Neris</h1>
                         <span class="banco__perfil">Banco Anbetec</span>
@@ -47,8 +47,8 @@
                 
                 <div class="intro__processamento-servico">
                     <p class="paginacao__processamento-servico">
-                        <a href="./home.html" class="link-paginacao">Produtos</a>
-                        <a href="./edi-financeiro.html" class="link-paginacao-edi">EDI Financeiro</a>
+                        <a href="../home.html" class="link-paginacao">Produtos</a>
+                        <a href="../edi-financeiro.html" class="link-paginacao-edi">EDI Financeiro</a>
                         <a href="./processamento-servico.html" class="destaque__paginacao">Processamento de Serviço</a>
                     </p>
                 </div>
@@ -520,7 +520,7 @@
                 <div class="container__processo-concluido" id="container__processo-concluido">
 
                     <div class="processo-concluido">
-                        <img src="./Assets/icone-concluido.png" alt="Processo Concluido" class="icone__concluido">
+                        <img src="../Assets/icone-concluido.png" alt="Processo Concluido" class="icone__concluido">
                         <p class="texto__concluido">Títulos enviados para o processamento</p>
                         <button class="botao__fecha-concluido" id="botao-fecha">Fechar</button>
                     </div>
@@ -530,7 +530,7 @@
                 <div class="container__processo-concluido" id="container__processo-concluido___pagamento">
 
                     <div class="processo-concluido">
-                        <img src="./Assets/icone-concluido.png" alt="Processo Concluid" class="icone__concluido">
+                        <img src="../Assets/icone-concluido.png" alt="Processo Concluid" class="icone__concluido">
                         <p class="texto__concluido">Títulos enviados para o processamento</p>
                         <button class="botao__fecha-concluido" id="botao-fecha__pagamento">Fechar</button>
                     </div>
@@ -539,7 +539,7 @@
 
             </section>
         </main>
-        <script src="./Componentes/index.js" type="module"></script>
-        <script src="./Componentes/tab.js" type="text/javascript"></script>
+        <script src="../Componentes/index.js" type="module"></script>
+        <script src="../Componentes/tab.js" type="text/javascript"></script>
     </body>
 </html>
