--- a/EDI-FINANCEIRO/configuracaoDeServico.html
+++ b/EDI-FINANCEIRO/configuracaoDeServico.html
@@ -1599,11 +1599,11 @@
 
         </main>
     
-    <script src="./Componentes/tab.js" type="text/javascript"></script>
-    <script src="./Componentes/ConfiguraçõesServiço/tab-configuracao-cobranca.js" type="text/javascript"></script>
-    <script src="./Componentes/Modules/moduleProcessamentos.js" type="module"></script>
-    <script src="./Componentes/ConfiguraçõesServiço/accordion-retorno.js" type="text/javascript"></script>
-    <script src="./Componentes/ConfiguraçõesServiço/tab-configuracao-api.js" type="text/javascript"></script>
+    <script src="../Componentes/tab.js" type="text/javascript"></script>
+    <script src="../Componentes/ConfiguraçõesServiço/tab-configuracao-cobranca.js" type="text/javascript"></script>
+    <script src="../Componentes/Modules/moduleProcessamentos.js" type="module"></script>
+    <script src="../Componentes/ConfiguraçõesServiço/accordion-retorno.js" type="text/javascript"></script>
+    <script src="../Componentes/ConfiguraçõesServiço/tab-configuracao-api.js" type="text/javascript"></script>
     </body>
     
 </html>
