Criando read me

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                         <div class="input-container">
                             <label for="email" class="label-email">Email</label>
                             <input name="email" id="email" class="input-email input" type="email" placeholder="exemplo@empresa.com" data-tipo="email" autocomplete="off" autofocus>
+                            <span class="input-email-mensagem-erro">Email incorreta.</span>
                         </div>
 
                         <div class="input-container">
