--- a/EDI-FINANCEIRO/configuracaoDeServico.html
+++ b/EDI-FINANCEIRO/configuracaoDeServico.html
@@ -7,11 +7,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../CSS/Configuração-Serviço/configuracaoServico.css">
-        <link rel="stylesheet" href="../CSS/Configuração-Serviço/configuracaoServicoPagamento.css">
-        <link rel="stylesheet" href="../CSS/Configuração-Serviço/configuracaoServicoExtrato.css">
-        <link rel="stylesheet" href="../CSS/Configuração-Serviço/configuracaoServicoDDA.css">
-        <link rel="stylesheet" href="../CSS/Configuração-Serviço/configuracaoServicoResponsivo.css">
+        <link rel="stylesheet" href="../CSS/Configuracao-Servico/configuracaoServico.css">
+        <link rel="stylesheet" href="../CSS/Configuracao-Servico/configuracaoServicoPagamento.css">
+        <link rel="stylesheet" href="../CSS/Configuracao-Servico/configuracaoServicoExtrato.css">
+        <link rel="stylesheet" href="../CSS/Configuracao-Servico/configuracaoServicoDDA.css">
+        <link rel="stylesheet" href="../CSS/Configuracao-Servico/configuracaoServicoResponsivo.css">
         <link href="../CSS/base.css" rel="stylesheet">
         <link href="../CSS/reset.css" rel="stylesheet">
         <link href="../CSS/normalize.css" rel="stylesheet">
@@ -1600,10 +1600,10 @@
         </main>
     
     <script src="../Componentes/tab.js" type="text/javascript"></script>
-    <script src="../Componentes/ConfiguraçõesServiço/tab-configuracao-cobranca.js" type="text/javascript"></script>
+    <script src="../Componentes/ConfiguracoesServico/tab-configuracao-cobranca.js" type="text/javascript"></script>
     <script src="../Componentes/Modules/moduleProcessamentos.js" type="module"></script>
-    <script src="../Componentes/ConfiguraçõesServiço/accordion-retorno.js" type="text/javascript"></script>
-    <script src="../Componentes/ConfiguraçõesServiço/tab-configuracao-api.js" type="text/javascript"></script>
+    <script src="../Componentes/ConfiguracoesServico/accordion-retorno.js" type="text/javascript"></script>
+    <script src="../Componentes/ConfiguracoesServico/tab-configuracao-api.js" type="text/javascript"></script>
     </body>
     
 </html>
